Set up handle of product details functionality

--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,8 @@
 :root {
-  --mainBkgd: #282c34;
   --brightWhite: #ffffff;
   --mainWhite: #f3f3f3;
-  --mainDark: #232528;
   --mainYellow: #f3d11d;
-  --offWhite: #646464;
-  --offBlack: #1e2024;
+  --mainGrey: #646464;
   --mainPink: #d70094;
   --mainOrange: #ed7d31;
 }
@@ -17,13 +14,11 @@ body {
 }
 
 .text-title {
-  /* font-family: "Staatliches", cursive; */
-  font-family: "Roboto", sans-serif;
   letter-spacing: 0.3rem;
   text-transform: uppercase;
 }
-.text-pink {
-  color: var(--offWhite);
+.text-grey {
+  color: var(--mainGrey);
   font-weight: lighter;
 }
 
