--- a/src/App.css
+++ b/src/App.css
@@ -49,3 +49,32 @@ body {
 .btn-outline-danger {
   border-radius: 0 !important;
 }
+
+.lead {
+  color: var(--mainGrey);
+}
+
+.bulb {
+  height: 17rem !important;
+}
+
+.fix {
+  margin-top: 17rem;
+}
+
+.on {
+  animation: fadeIn forwards;
+  visibility: hidden;
+  animation-delay: 1.4s;
+}
+@keyframes fadeIn {
+  to {
+    visibility: visible;
+  }
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
